feat: Improve testing setup and type safety
Refactors the project to use `@testing-library/dom` for more robust testing utilities and fixes type errors in `server/index.ts` by correctly importing `Request` and `Response` types from `express`. Also updates dependencies in `index.html`.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "dotenv/": "https://aistudiocdn.com/dotenv@^17.2.2/",
     "helmet": "https://aistudiocdn.com/helmet@^8.1.0",
-    "express-rate-limit": "https://aistudiocdn.com/express-rate-limit@^8.1.0"
+    "express-rate-limit": "https://aistudiocdn.com/express-rate-limit@^8.1.0",
+    "@testing-library/dom": "https://aistudiocdn.com/@testing-library/dom@^10.4.1"
   }
 }
 </script>
